<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="5dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtTitle"
        android:hint="@string/title"
        android:textStyle="bold"
        android:ellipsize="end"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtAddress"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtDuration"
        android:hint="@string/duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>