<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="easyroadtrip.com.ezroadtrip.Presentation.activity.NewTripActivity">

    <!--<TextView-->
        <!--android:text="@string/new_trip"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"/>-->

    <Button
        android:id="@+id/btnFindRoute"
        android:text="@string/find_the_route"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ScrollView
        android:layout_above="@+id/btnFindRoute"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/txtAutoOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <AutoCompleteTextView
                android:id="@+id/txtAutoDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtStartDate"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtEndDate"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edtBudget"
                android:hint="Enter Budget $$$"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <android.support.v7.widget.AppCompatCheckBox
                android:text="Safety Alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
